August_30/August_30/src/objects/Business_at_Risk__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Describes the Account in relation with Business At Risk.</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business, Institution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business at Risks</relationshipLabel>
        <relationshipName>Business_at_Risks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creditors_Amount__c</fullName>
        <description>Total amount of money borrowed from creditors in company's Interest.</description>
        <label>Creditors Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Liquidator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This filed describes the person who is responsible for selling all the assets hold by the company.</description>
        <label>Liquidator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_at_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Share__c</fullName>
        <description>This field represents amount hold by Share Holders towards company.</description>
        <label>ShareHolders Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Assets__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field represents total Assets hold by respective company.</description>
        <label>Total Assets</label>
        <referenceTo>FinServ__AssetsAndLiabilities__c</referenceTo>
        <relationshipLabel>Business at Risks</relationshipLabel>
        <relationshipName>Business_at_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Dues__c</fullName>
        <description>Total Dues owned by this company.</description>
        <label>Total Dues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Represents the type of Liquidations for users to select.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Voluntary liquidation</fullName>
                </value>
                <value>
                    <fullName>Creditors’ voluntary liquidation</fullName>
                </value>
                <value>
                    <fullName>Compulsory liquidation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business at Risk</label>
    <nameField>
        <label>Business at Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business at Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>